--- a/client/src/index.css
+++ b/client/src/index.css
@@ -199,10 +199,11 @@
 
 
 .bodyC{
-  background-image: url("https://i.pinimg.com/originals/08/a7/ab/08a7ab130881d2fb60585dc37744e04b.jpg");
+  background-image: url('./assets/img/back.jpg');
   height: 100%;
   width: 100%;
   overflow: hidden;
+  overflow-y: auto;
   /* Center and scale the image nicely */
   background-position: center;
   background-repeat: no-repeat;
@@ -240,7 +241,7 @@ body, html, .App, #root, .auth-wrapper {
   font-size: 50px;
   font-weight: 700;
   line-height: 48px;
-  margin: 10px;
+  margin: 100px;
   letter-spacing: 5px;
   
 }
@@ -283,7 +284,6 @@ body, html, .App, #root, .auth-wrapper {
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
- 
 }
 
 .auth-wrapper {
